# GP

./: CMakeLists.txt  README  README.md
dox/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  example.cpp
include/: GP.hpp
include/GP/: Axes.hpp  BasicPlot.hpp  Binary.hpp  Clear.hpp  Compatibility.hpp  Config.hpp  DataPlot.hpp  Endian.hpp  Enum.hpp  Exit.hpp  Format.hpp  FunctionPlot.hpp  History.hpp  Set.hpp  Smooth.hpp  Stream.hpp  Style.hpp  Terminal.hpp
include/GP/detail/: Set.hpp
